# fysh

./: .eslintrc.js  .gitignore  .gitmodules  .nxignore  .prettierignore  .vscodeignore  CMakeLists.txt  Doxyfile  FIVE_EMBED_DEV.md  LICENSE  Lexer.cpp  Makefile  Package.swift  README(StraigtForward).md  README.md  README1.25.md  README1.5.md  README2.md  THINK BOARD.md  TODO.md  add.fysh  binding.go  binding.gyp  blink.fysh  build.sh  bynarytest.fysh  completion.go  deploy.go  dprint.json  encode.go  example-fysh-fyve.ld  fib.fysh  fysh  fysh-fyve.tcl  fysh-fyve.xpr  fysh.sh  go.mod  go.sum  go.work  go.work.sum  (+27 more)
.github/workflows/: fyshls.yml  go-tests.yml  release.yml
.nx/: nxw.js
asm/: CMakeLists.txt  Register.cc  Register.h  alu.S  blink.s  boot.s  bt.S  example.S  example.s  factorial.S  fibby.s  fysh-blink.s  fysh-fyve.ld  gpio.s  main.cc
assets/css/: opening.css
ast/: expr.go  node.go  stmt.go
ast/binary/: binary.go
ast/unary/: unary.go
bindings/: bindings.go  bindings_test.go  parser.c  scanner.c
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
bindings/tree_sitter/: parser.h
client/: package-lock.json  package.json  pnpm-lock.yaml
client/src/: extension.ts
cmd/deploy/: main.go
cmd/install/: main.go
cmd/interpreter/: go-fysh.go
constraints/: ZyboZ7_master.xdc
core/: alu.vhd  alu_control.vhd  alu_operations_pkg.vhd  control_fsm.vhd  imm_sx.md  imm_sx.vhd  mbr_sx.vhd  mem.vhd  memory.vhd  program_counter.vhd  register_file.vhd  topmodule.vhd
docs/: Final-Presentation.md  Project_Plan.md  controller.md
docs/PDD/: .gitignore  Makefile  README.md  biblio.bib  custom.tex  install.sh  spellcheck.sh  to-pdf.sh
evaluator/: builtins.go  evaluator.go  evaluator_test.go
examples/: Fysh-Matrix.md  blink.fysh  break.fysh  fib.fysh  ifelse.fysh  simple-matrix.fysh
fysh/: simple-matrix.fysh  token.go  token_test.go
fysh-sea/Compyler/: CompyleStatements.cc
fysh-sea/Interpreter/: BabelFysh.go
fysh-sea/Lexer/: Lexer.cc  Lexer.h
layouts/: index.html
layouts/partials/: head.html
layouts/shortcodes/: opening.html
object/: environment.go  object.go
parser/: parser.go  parser_test.go
pkg/docs-capstone/: .gitignore  Doxyfile  (+2 more)
pkg/tree-sitter-fysh/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  dprint.json  embed.go  go.mod  go.sum  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
pkg/tree-sitter-fysh/bindings/c/: tree-sitter-fysh.h  tree-sitter-fysh.pc.in
pkg/tree-sitter-fysh/bindings/go/: binding.go  binding_test.go  go.mod
pkg/tree-sitter-fysh/bindings/node/: binding.cc
pkg/tree-sitter-fysh/bindings/python/tests/: test_binding.py
pkg/tree-sitter-fysh/bindings/python/tree_sitter_fysh/: __init__.py  binding.c
pkg/tree-sitter-fysh/bindings/rust/: build.rs  lib.rs
pkg/tree-sitter-fysh/bindings/swift/TreeSitterFyshTests/: TreeSitterFyshTests.swift
pkg/tree-sitter-fysh/queries/: embed.go
pkg/tree-sitter-fysh/src/: grammar.json  node-types.json  parser.c
queries/: embed.go  highlights.scm  injections.scm
repl/: repl.go
scanner/: scanner.go  scanner_test.go
scripts/: CMakeLists.txt  asm.cc  install-riscv-toolchain.sh  make_rom.sh  rom.cc
server/: completion.go  server.go
src/: AST.cc  AST.h  Box.h  CMakeLists.txt  Compyler.cc  Compyler.h  Fysh.cc  Fysh.h  Lexer.cc  Lexer.h  Parser.cc  Parser.h  Species.h  Stream.h  Token.cc  Token.h  autocomplete.ts  babel-fysh.cc  common.ts  extension.ts  fysh-sea.cc  fysh.colours.json  grammar.json  install.ts  main.cc  node-types.json  parser.c  semanticAnalyzer.cc  semanticAnalyzer.h  snippets.json  terminal.ts
src/AST/: AST.cc  AST.h
src/Compyler/: CompyleExpressions.cc  Compyler.cc  Compyler.h  Expressions.cc  Program.cc  Program.h  Statements.cc  Symbols.cc
src/Fysh/: Fysh.cc  Fysh.h  Species.h
src/Interpreter/: interpreter.go
src/Lexer/: Lexer.cc  Lexer.h
src/Lexer/Fysh/: Fysh.cc  Fysh.h  Species.h
src/Parser/: ParseExpressions.cc  ParseStatements.cc  Parser.cc  Parser.h
src/Parser/AST/: AST.cc  AST.h  Operators.h
src/SemanticAnalyzer/: SemanticAnalyzer.cc  SemanticAnalyzer.h
src/VybeChecker/: VybeChecker.cc  VybeChecker.h
src/ast/: expr.go  node.go  stmt.go
src/evaluator/: builtins.go  evaluator.go  evaluator_test.go
src/fysh/: token.go  token_test.go
src/object/: object.go  object_test.go
src/parser/: parser.go  parser_test.go
src/repl/: repl.go
src/scanner/: scanner.go  scanner_test.go  tails.go  tails_test.go
sw/: boot.s  fysh-fyve.ld  gpio.c
syntaxes/: fysh.tmGrammar copy.json  fysh.tmGrammar.json
test/: CMakeLists.txt  Fysh_test.cc  Lexer_test.cc  Register_test.cc  Token_test.cc  alu_control_tb.vhd  alu_tb.vhd  imm_sx_tb.vhd  mem_tb.vhd  memory_tb.vhd  register_file_tb.vhd  test_Fysh.cc  test_Lexer.cc  test_Lexer_operators.cc  test_Parser.cc  test_main.cc  topmodule_tb.vhd
test/corpus/: aquarium.txt  biblical.txt  binary.txt  bones.txt  break.txt  comment.txt  factorial.txt  fib.txt  hearts.txt  if_else.txt  operators.txt  sub.txt
version/: version.go
(+273 files in other folders)
